editmode: Fix buttons on Safari

--- a/css/compat.css
+++ b/css/compat.css
@@ -3,3 +3,9 @@
 	background: #eaeaea;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#e0e0e0));
 }
+
+/* Safari has some kind of minimum width for buttons. Increase button size to adapt to that. */
+.mobile_safari .setup_network_matches_reload, .mobile_safari .button_delete {
+	width: 2em;
+	height: 2em;
+}
